--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-style: Epilouge;
+  overflow: visible;
 }
 
 code {
@@ -49,7 +50,7 @@ code {
   color: #565E6CFF;
   /* neutral-600 */
   text-align: left;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-top: 5px;
   margin-top: 5px;
 }
@@ -126,12 +127,12 @@ code {
 .product-form-inputs-5 {
   float: left;
   flex: 1;
-  height: 100%;
+  height: 45px;
   font-size: 14px;
   border: 1px solid gray;
   background: #F3F4F6FF;
   box-sizing: border-box;
-  width: 30px;
+  width: 132px;
   margin-right: 10px;
   margin-top: 5px;
   border-radius: 5px;
@@ -224,6 +225,7 @@ img {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   height: 5 vw;
   width: 100%;
+  overflow: visible;
 }
 
 .logo {
@@ -271,7 +273,7 @@ img {
   font-size: 32px;
   line-height: 48px;
   color: #171A1FFF;
-  /* neutral-900 */
+   /* neutral-900 */
 }
 
 /* Set font family and font size for placeholder */
@@ -436,7 +438,7 @@ table {
 
 table {
   border: 2px solid #ddd;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 table th,
@@ -517,6 +519,7 @@ table tbody tr:hover {
   line-height: 33px;
   color: #171A1FFF;
   margin-top: 50px;
+  display: flex;
 }
 
 .one {
@@ -536,3 +539,31 @@ margin-bottom: 10px; */
   /* margin-top: 20px;
 margin-bottom: 10px; */
 }
+.four{
+  width: 425px;
+  height: 70px;
+  box-sizing: border-box;
+  display: flex;
+  /* background-color: red;  */
+}
+@media (max-width: 1500px) {
+  /* .inputLabels {
+    display: none;
+  } */
+  .formFields{
+    display: block;
+   }
+   .submitButton{
+    margin-left: 0px;
+   }
+   .productDetails{
+    margin-left: 10rem;
+   }
+   .tableHeading {
+    margin-left: 10rem;
+  }
+}
+@media (min-width: 1500px) {
+
+}
+
