mobile version css

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-style: Epilouge;
   overflow: visible;
+  background-size: cover;
 }
+
+
 
 code {
   font-family: Helvetica;
@@ -55,11 +58,10 @@ code {
   margin-top: 5px;
 }
 
-#gstValues {
-  margin-top: -20px;
-  margin-top: -50px;
+.gst-col{
+  margin-top: -25px;
+  margin-bottom: -5px;
 }
-
 .product-form-input {
   flex: 1;
   width: 390px;
@@ -155,6 +157,7 @@ code {
   font-size: 15px;
   line-height: 30px;
   color: #565E6CFF;
+  margin-top: 7px;
 }
 
 /* Button 1 */
@@ -262,17 +265,18 @@ img {
 
 .formFields {
   display: flex;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .productDetails {
-  margin-left: 400px;
+  /* margin-left: 400px; */
   margin-bottom: 20px;
   font-family: Helvetica;
   /* Heading */
   font-size: 32px;
   line-height: 48px;
   color: #171A1FFF;
+  text-align: center;
    /* neutral-900 */
 }
 
@@ -512,7 +516,7 @@ table tbody tr:hover {
 }
 
 .tableHeading {
-  margin-left: 425px;
+  margin-left: 30%;
   width: 712px;
   font-family: Helvetica;
   font-size: 25px;
@@ -520,6 +524,7 @@ table tbody tr:hover {
   color: #171A1FFF;
   margin-top: 50px;
   display: flex;
+  /* text-align: center; */
 }
 
 .one {
@@ -546,7 +551,7 @@ margin-bottom: 10px; */
   display: flex;
   /* background-color: red;  */
 }
-@media (max-width: 1450px) {
+@media (max-width:1450px) {
   /* .inputLabels {
     display: none;
   } */
@@ -562,8 +567,154 @@ margin-bottom: 10px; */
    .tableHeading {
     margin-left: 10rem;
   }
-}
-@media (min-width: 1500px) {
-
+ 
 }
 
+@media (max-width: 768px) {
+  .formFields{
+    margin-top: 0px;
+  }
+  .product-form-input {
+    flex: 1;
+    width: 320px;
+    height: 25px;
+    padding: 10px;
+    /* margin-top: 5px; */
+    border: 1px solid gray;
+    font-size: 14px;
+    background: #F3F4F6FF;
+    border-radius: 5px;
+    
+  }
+  
+  .product-form-input-2 {
+    flex: 1;
+    width: 250px;
+    height: 25px;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid gray;
+    font-size: 14px;
+    background: #F3F4F6FF;
+    margin-right: 2px;
+    border-radius: 5px;
+    /* margin-bottom: 5px; */
+  }
+  
+  .product-form-input-3 {
+    float: left;
+    flex: 1;
+    height: 100%;
+    font-size: 14px;
+    border: 1px solid gray;
+    background: #F3F4F6FF;
+    box-sizing: border-box;
+    width: 50px;
+    margin-right: 10px;
+    border-radius: 5px;
+  }
+  
+  .product-form-input-end {
+    float: left;
+    flex: 1;
+    height: 100%;
+    font-size: 14px;
+    border: 1px solid gray;
+    background: #F3F4F6FF;
+    box-sizing: border-box;
+    width: 50px;
+    border-radius: 5px;
+  }
+  
+  .product-form-input-4 {
+    float: left;
+    flex: 1;
+    height: 100%;
+    font-size: 14px;
+    border: 1px solid gray;
+    background: #F3F4F6FF;
+    box-sizing: border-box;
+    width: 50px;
+    margin-right: 10px;
+    border-radius: 5px;
+  }
+  
+  .product-form-inputs-5 {
+    float: left;
+    flex: 1;
+    height: 45px;
+    font-size: 14px;
+    border: 1px solid gray;
+    background: #F3F4F6FF;
+    box-sizing: border-box;
+    width: 110px;
+    margin-right: 10px;
+    margin-top: 5px;
+    border-radius: 5px;
+  }
+  
+  .measurementDimensions {
+    width: 20px;
+    height: 100%;
+    font-size: 14px;
+    background: #F3F4F6FF;
+    margin-right: 5px;
+    float: left;
+    /* margin-bottom: 30px; */
+  }
+  select {
+    width: 345px;
+    height: 47px;
+    /* margin-bottom: 30px; */
+    font-size: 14px;
+    background: #F3F4F6FF;
+    font-family: Helvetica;
+    color: gray;
+    font-size: 14px;
+    flex: 1;
+    border-radius: 5px;
+  }
+.one{
+  width: 360px;
+}
+.two{
+  width: 350px;
+}
+.four{
+  width: 305px;
+  height: 70px;
+  box-sizing: border-box;
+  display: flex;
+}
+.social-media{
+  display: none;
+}
+.inputLabels{
+  font-size: 16px;
+  margin-top: 0px;
+}
+.shipmentOptions{
+  padding-left: 5px;
+}
+.radio {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+}
+
+.radio-item {
+  margin-right: 0px;
+}
+
+.shipmentOptions {
+  margin-left: 5px;
+}
+.productDetails{
+  margin-left: -10px;
+}
+.sidep{
+  margin-bottom: 0px;
+  font-size: 14px;
+}
+
+}
