--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ code {
   border: 1px solid gray;
   background: #F3F4F6FF;
   box-sizing: border-box;
-  width: 400px;
+  width: 335px;
   margin-right: 10px;
   border-radius: 5px;
 }
@@ -211,6 +211,48 @@ img {
   width: 7vh;
   margin-top: 3vh;
   height: 3vw;
+}
+.popup{
+  position: absolute; 
+  top: 320px; 
+  left: 540px; 
+  width: 560px; 
+  height: 114px; 
+  background: #FFFFFFFF; 
+  border-radius: 6px; 
+  box-shadow: 0px 4px 9px #171a1f, 0px 0px 2px #171a1f;
+  justify-content: center;
+}
+.error-msg{
+  margin-top: 20px;
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 14px; 
+  line-height: 22px; 
+  color: #171A1FFF; 
+  text-align: center;
+}
+.cancel-btn{
+  margin-left: 450px;
+  align-items: right; 
+  justify-content: center; 
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 14px; 
+  line-height: 22px; 
+  color: #FFFFFFFF; 
+  background: #00BDD6FF; 
+  opacity: 1; 
+  border: none; 
+  border-radius: 4px; 
+}
+.popup::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F5F5F5;
+  z-index: -1;
 }
 
 .logo {
@@ -335,6 +377,10 @@ select {
   /* border-l */
 }
 
+.submitButton:hover{
+  cursor: pointer;
+}
+
 /* Hover */
 .button:hover {
   color: #FFFFFFFF;
@@ -380,17 +426,29 @@ input::placeholder {
 
 .radio {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-row-gap: 0px;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 4px;
   align-items: center;
 }
 
 .radio-item {
-  /* margin-right: 5px; */
+  margin-right: 5px;
 }
 
-
-
+#weightDimensions{
+  width: 60px;
+  height: 47px;
+  font-size: 14px;
+  background: #F3F4F6FF;
+  margin-right: 10px;
+}
+#measurementDimensions{
+  width: 60px;
+  height: 47px;
+  font-size: 14px;
+  background: #F3F4F6FF;
+  margin-right: 10px; 
+}
 
 #add {
   font-family: Helvetica;
@@ -716,5 +774,17 @@ margin-bottom: 10px; */
   margin-bottom: 0px;
   font-size: 14px;
 }
-
+.popup{
+  position: absolute; 
+  top: 414px; 
+  left: 35px; 
+  width: 398px; 
+  height: 138px; 
+  background: #FFFFFFFF; 
+  border-radius: 6px; 
+  box-shadow: 0px 4px 9px #171a1f, 0px 0px 2px #171a1f; 
+}
+.cancel-btn{
+  margin-left: 300px;
+}
 }
